--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -2,7 +2,7 @@ FROM node:latest
 
 WORKDIR /app
 COPY package.json package-lock.json ./
-RUN npm install
+RUN npm ci
 COPY . .
 EXPOSE 8080
 CMD ["npm", "start"]
