--- a/ui/package.json
+++ b/ui/package.json
@@ -15,20 +15,20 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime": "^7.5.5",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
     "schedule": "^0.5.0",
     "typescript": "^3.5.3",
     "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-cli": "^3.3.7"
   },
   "dependencies": {
-    "@material-ui/core": "^4.3.3"
+    "@babel/runtime": "^7.5.5",
+    "@material-ui/core": "^4.3.3",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "webpack-dev-server": "^3.8.0"
   }
 }
